--- a/css/styles.css
+++ b/css/styles.css
@@ -141,3 +141,10 @@ footer {
   display: block;
   margin: 0 auto;
 }
+.img-medium-small-mid3{
+  max-width: 20px;
+  width: 20%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
